--- a/src/static/css/player.css
+++ b/src/static/css/player.css
@@ -9,7 +9,7 @@
 
 .player__video{
     object-fit: contain;
-    background-color: #fff;
+    background-color: #000;
 }
 
 .player__top-bar{
@@ -35,12 +35,12 @@
     /* height: 3rem; */
     display: grid;
     grid-template-rows: auto 3rem;
-    grid-template-columns: 1fr auto 1fr;
+    grid-template-columns: 1fr auto auto 1fr;
     grid-template-areas:
         "timeline timeline timeline timeline"
         "actions timestamp title additions"
     ;
-    gap: 1rem;
+    gap: 0 1rem;
     align-items: center;
     z-index: 10;
     padding: 0 .5rem;
@@ -49,7 +49,7 @@
 }
 
 .player__timeline{
-    --progress: 50%;
+    --progress: .1%;
     grid-area: timeline;
     width: 100%;
     height: .2rem;
@@ -57,6 +57,7 @@
     transition: transform .1s;
     cursor: pointer;
     touch-action: pan-y;
+    background-color: #fff3;
 }
 
 .player__timeline::after{
